Add jacoco to maven build